<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:text="@string/tab_common_full_name"
            android:textSize="15sp"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:id="@+id/txt_fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_blue"
            android:text="HUYNH Meow Moew"
            android:textSize="15sp"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:text="@string/tab_common_gender"
            android:textSize="15sp"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:id="@+id/txt_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_blue"
            android:text="Bê đê"
            android:textSize="15sp"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:text="@string/tab_common_ID"
            android:textSize="15sp"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:id="@+id/txt_cccd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_blue"
            android:text="0132451627152"
            android:textSize="15sp"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:text="@string/tab_common_date"
            android:textSize="15sp"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:id="@+id/txt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_blue"
            android:text="11/11/2003"
            android:textSize="15sp"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:text="@string/tab_common_number_phone"
            android:textSize="15sp"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:id="@+id/txt_number_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_blue"
            android:text="01234567890"
            android:textSize="15sp"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:text="@string/tab_common_email"
            android:textSize="15sp"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_blue"
            android:text="moew203@dev.xxx"
            android:textSize="15sp"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />
    </RelativeLayout>
</LinearLayout>