<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_change_password_student"
    android:background="@color/white"
    android:orientation="vertical"
    android:windowSoftInputMode="adjustPan"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/dark_blue"
        android:elevation="4dp"
        android:gravity="left"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="HardcodedText,RtlHardcoded">

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        tools:ignore="UselessLeaf">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Mật khẩu mới"
            android:textStyle="bold"
            android:textColor="@color/dark_blue"
            android:textSize="40sp"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/student_old_pass"
            android:layout_marginBottom="5dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxStrokeColor="@color/dark_blue"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/dark_blue"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_oldPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/txt_check_old"
            android:layout_width="wrap_content"
            android:textColor="@color/waring"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="5dp"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/student_new_pass"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxStrokeColor="@color/dark_blue"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/dark_blue"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_newPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/txt_check_new"
            android:layout_width="wrap_content"
            android:textColor="@color/waring"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="5dp"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/student_confirm_pass"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxStrokeColor="@color/dark_blue"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/dark_blue"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_confirmPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txt_check_pass"
            android:layout_width="wrap_content"
            android:textColor="@color/waring"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="Xác nhận"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:backgroundTint="@color/dark_blue"
            tools:ignore="HardcodedText,ObsoleteLayoutParam" />
    </LinearLayout>

</LinearLayout>